fix footer. Added overflow hidden into App.

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
-  height: 1200px; 
+
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 .App-header {
